fix broken sp layout: 1. 1. add overflow-x-hidden to global body 2. make tooltips hidden rather than invisable and block when they are visable, so they don't affect layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,15 +66,15 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-x-hidden;
   }
 
   .tooltip {
-    @apply invisible absolute;
+    @apply hidden absolute;
   }
 
   .has-tooltip:hover .tooltip {
-    @apply visible z-50
+    @apply block z-50
   }
 
 }
